<resources>
    <string name="app_name">QuizZz</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- UI Strings -->
    <string name="quiz_title_label">Title</string>
    <string name="quiz_description_label">Description</string>
    <string name="save_quiz_button">Save</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_submit">Log in</string>
    <string name="load_quizzes_error">An error occurred while loading the quizzes, please try again</string>
    <string name="navigation_drawer_default_username">Welcome to QuizZz!</string>
    <string name="user_login_failed">Login failed</string>
    <string name="sign_in_from_login">Not a member? Sign in instead!</string>

    <string name="forgot_password">Forgot my password</string>
    <string name="forgot_password_label_title">Forgot your password?</string>
    <string name="forgot_password_label_subtitle">Enter your email address and you will receive a link to reset your password</string>
    <string name="forgot_password_submit">Send email</string>
    <string name="forgot_password_success">You should soon receive an email with the instructions on how to reset your password</string>
    <string name="forgot_password_faiulre">The request failed</string>
    <string name="forgot_password_user_not_exist">The user doesn\'t exist</string>

    <!-- Prefs Strings -->
    <string name="prefs_is_logged_in">IsLoggedIn</string>
    <string name="prefs_basic_auth">BasicAuth</string>
    <string name="prefs_user_id">UserId</string>
    <string name="prefs_username">Username</string>
    <string name="prefs_email">Email</string>
    <string name="toolbar_title">QuizZz</string>
    <string name="saved_quiz">Quiz saved</string>
    <string name="general_failure">Unkown error</string>

    <string name="sign_up_label_title">Sign up!</string>
    <string name="sign_up_username_label">Username</string>
    <string name="sign_up_submit">Register</string>
    <string name="sign_up_email_label">Email</string>
    <string name="sign_up_password_label">Password</string>
    <string name="sign_up_repeat_password_label">Confirm Password</string>
    <string name="signup_successful">Almost there! You will soon receive a confirmation email</string>
    <string name="signup_user_exists">The email is already in use</string>
    <string name="unknown_error">Unkown error</string>
    <string name="passwords_dont_match_warning">Passwords don\'t match</string>
    <string name="email_wrong_format_warning">Please, enter a valid email</string>
    <string name="empty_username_warning">Please, enter a username</string>
    <string name="quiz_logo_label">QuizZz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_submit_answer">Submit</string>
    <string name="play_no_answer_selected">Please, select an answer</string>
    <string name="title_activity_play_quiz">PlayQuizActivity</string>
    <string name="btn_finish_game">Finish!</string>


</resources>
